--- a/styles/05-Components/_register.scss
+++ b/styles/05-Components/_register.scss
@@ -1,6 +1,6 @@
 .register-page {
     max-width: 50%;
-    margin: 5rem auto 0;
+    margin: 3rem auto 0;
     padding: 2rem;
     background-color: $black-900;
     border-radius: 20px;
@@ -26,7 +26,7 @@
     }
 
     &__footer {
-        margin-top: 5rem;
+        margin-top: 1rem;
 
         span,
         a {
